cambios textos y footer
Cambios de textos y proposicion de nuevos cambios para los desarrolladores.

--- a/views/course-details.ejs
+++ b/views/course-details.ejs
@@ -91,23 +91,27 @@
           <div class="col-lg-4">
 
             <div class="course-info d-flex justify-content-between align-items-center">
-              <h5>Trainer</h5>
+              <h5>Profesor</h5>
               <p><a href="/perfiles.html">Walter White</a></p>
             </div>
 
             <div class="course-info d-flex justify-content-between align-items-center">
-              <h5>Course Fee</h5>
-              <p>$165</p>
+              <h5>Precio certificación</h5>
+              <p>$165</p>   
             </div>
 
             <div class="course-info d-flex justify-content-between align-items-center">
-              <h5>Available Seats</h5>
-              <p>30</p>
+              <h5>Horas del curso</h5>
+              <p>50</p>
             </div>
 
             <div class="course-info d-flex justify-content-between align-items-center">
-              <h5>Schedule</h5>
+              <h5>Horarios de tutoria</h5>
               <p>5.00 pm - 7.00 pm</p>
+            </div>
+
+            <div>
+                <button class="btn btn-success"> Inscribir</button>
             </div>
 
           </div>
@@ -224,7 +228,7 @@
               Eduacation<br>
               Avaitable<br>
               every one<br><br>
-              <strong>inquietudes:</strong> a<br>
+              <strong>inquietudes:</strong> <br>
               <strong>Email:</strong> info@Learnig4allcom<br>
             </p>
           </div>
@@ -232,10 +236,10 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Inicio</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">¿Quienes somos?</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Cursos</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Iniciar sesion</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/index.html">Inicio</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/about.html">¿Quienes somos?</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/courses.html">Cursos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/sesion.html">Iniciar sesion</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
           </div>
@@ -250,7 +254,7 @@
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Estudia en Learning4All</h4>
             <p>carrera desarrollo Full Stack</p>
-            <p>opiniiones</p>
+            <p>opiniones</p>
             <p>preguntas frecuentes</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
