--- a/views/curso-sql.ejs
+++ b/views/curso-sql.ejs
@@ -91,23 +91,27 @@
           <div class="col-lg-4">
 
             <div class="course-info d-flex justify-content-between align-items-center">
-              <h5>Trainer</h5>
+              <h5>Profesor</h5>
               <p><a href="/perfiles.html">Walter White</a></p>
             </div>
 
             <div class="course-info d-flex justify-content-between align-items-center">
-              <h5>Course Fee</h5>
-              <p>$165</p>
+              <h5>Precio certificación</h5>
+              <p>$165</p>   
             </div>
 
             <div class="course-info d-flex justify-content-between align-items-center">
-              <h5>Available Seats</h5>
-              <p>30</p>
+              <h5>Horas del curso</h5>
+              <p>26</p>
             </div>
 
             <div class="course-info d-flex justify-content-between align-items-center">
-              <h5>Schedule</h5>
+              <h5>Horarios de tutoria</h5>
               <p>5.00 pm - 7.00 pm</p>
+            </div>
+
+            <div> 
+                <button class="btn btn-success"> Inscribir</button>
             </div>
 
           </div>
@@ -124,19 +128,19 @@
           <div class="col-lg-3">
             <ul class="nav nav-tabs flex-column">
               <li class="nav-item">
-                <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">Modi sit est</a>
+                <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">Perfil arquitecto de software</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#tab-2">Unde praesentium sed</a>
+                <a class="nav-link" data-bs-toggle="tab" href="#tab-2">Perfil full stack</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#tab-3">Pariatur explicabo vel</a>
+                <a class="nav-link" data-bs-toggle="tab" href="#tab-3">Perfil scrum master</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#tab-4">Nostrum qui quasi</a>
+                <a class="nav-link" data-bs-toggle="tab" href="#tab-4">Perfil desarrollador</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#tab-5">Iusto ut expedita aut</a>
+                <a class="nav-link" data-bs-toggle="tab" href="#tab-5">Perfil estudiante</a>
               </li>
             </ul>
           </div>
@@ -145,8 +149,8 @@
               <div class="tab-pane active show" id="tab-1">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Architecto ut aperiam autem id</h3>
-                    <p class="fst-italic">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka</p>
+                    <h3>Perfil arquitecto de software</h3>
+                    <p class="fst-italic">Actitudes que todo arquitecto de sofware debe tener para prepararse para el ámbito laboral que Learnig4All prepara para todos.</p>
                     <p>Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui similique accusamus nostrum rem vero</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
@@ -157,8 +161,8 @@
               <div class="tab-pane" id="tab-2">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Et blanditiis nemo veritatis excepturi</h3>
-                    <p class="fst-italic">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka</p>
+                    <h3>Perfil full stack</h3>
+                    <p class="fst-italic">Actitudes que desarrollador full stack debe tener para prepararse para el ámbito laboral que Learnig4All prepara para todos.</p>
                     <p>Ea ipsum voluptatem consequatur quis est. Illum error ullam omnis quia et reiciendis sunt sunt est. Non aliquid repellendus itaque accusamus eius et velit ipsa voluptates. Optio nesciunt eaque beatae accusamus lerode pakto madirna desera vafle de nideran pal</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
@@ -169,8 +173,8 @@
               <div class="tab-pane" id="tab-3">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Impedit facilis occaecati odio neque aperiam sit</h3>
-                    <p class="fst-italic">Eos voluptatibus quo. Odio similique illum id quidem non enim fuga. Qui natus non sunt dicta dolor et. In asperiores velit quaerat perferendis aut</p>
+                    <h3>Perfil scrum master</h3>
+                    <p class="fst-italic">Actitudes que todo scrum master debe tener para prepararse para el ámbito laboral que Learnig4All prepara para todos.</p>
                     <p>Iure officiis odit rerum. Harum sequi eum illum corrupti culpa veritatis quisquam. Neque necessitatibus illo rerum eum ut. Commodi ipsam minima molestiae sed laboriosam a iste odio. Earum odit nesciunt fugiat sit ullam. Soluta et harum voluptatem optio quae</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
@@ -181,8 +185,8 @@
               <div class="tab-pane" id="tab-4">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Fuga dolores inventore laboriosam ut est accusamus laboriosam dolore</h3>
-                    <p class="fst-italic">Totam aperiam accusamus. Repellat consequuntur iure voluptas iure porro quis delectus</p>
+                    <h3>Perfil desarrollador</h3>
+                    <p class="fst-italic">Actitudes que todo desarrollador de sofware debe tener para prepararse para el ámbito laboral que Learnig4All prepara para todos.</p>
                     <p>Eaque consequuntur consequuntur libero expedita in voluptas. Nostrum ipsam necessitatibus aliquam fugiat debitis quis velit. Eum ex maxime error in consequatur corporis atque. Eligendi asperiores sed qui veritatis aperiam quia a laborum inventore</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
@@ -193,8 +197,8 @@
               <div class="tab-pane" id="tab-5">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Est eveniet ipsam sindera pad rone matrelat sando reda</h3>
-                    <p class="fst-italic">Omnis blanditiis saepe eos autem qui sunt debitis porro quia.</p>
+                    <h3>Perfil estudiante</h3>
+                    <p class="fst-italic">Actitudes que estudiante debe tener para prepararse para el ámbito laboral que Learnig4All prepara para todos.</p>
                     <p>Exercitationem nostrum omnis. Ut reiciendis repudiandae minus. Omnis recusandae ut non quam ut quod eius qui. Ipsum quia odit vero atque qui quibusdam amet. Occaecati sed est sint aut vitae molestiae voluptate vel</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
@@ -224,7 +228,7 @@
               Eduacation<br>
               Avaitable<br>
               every one<br><br>
-              <strong>inquietudes:</strong> a<br>
+              <strong>inquietudes:</strong> <br>
               <strong>Email:</strong> info@Learnig4allcom<br>
             </p>
           </div>
@@ -232,10 +236,10 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Inicio</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">¿Quienes somos?</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Cursos</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Iniciar sesion</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/index.html">Inicio</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/about.html">¿Quienes somos?</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/courses.html">Cursos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/sesion.html">Iniciar sesion</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
           </div>
@@ -250,7 +254,7 @@
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Estudia en Learning4All</h4>
             <p>carrera desarrollo Full Stack</p>
-            <p>opiniiones</p>
+            <p>opiniones</p>
             <p>preguntas frecuentes</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
