--- a/views/curso-html.ejs
+++ b/views/curso-html.ejs
@@ -117,6 +117,9 @@
               <p>5.00 pm - 7.00 pm</p>
             </div>
 
+            <div>
+                <button class="btn btn-success"> Inscribir</button>
+            </div>
           </div>
         </div>
 
@@ -231,7 +234,7 @@
               Eduacation<br>
               Avaitable<br>
               every one<br><br>
-              <strong>inquietudes:</strong> a<br>
+              <strong>inquietudes:</strong> <br>
               <strong>Email:</strong> info@Learnig4allcom<br>
             </p>
           </div>
@@ -239,10 +242,10 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Inicio</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">¿Quienes somos?</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Cursos</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Iniciar sesion</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/index.html">Inicio</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/about.html">¿Quienes somos?</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/courses.html">Cursos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/sesion.html">Iniciar sesion</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
           </div>
@@ -257,7 +260,7 @@
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Estudia en Learning4All</h4>
             <p>carrera desarrollo Full Stack</p>
-            <p>opiniiones</p>
+            <p>opiniones</p>
             <p>preguntas frecuentes</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
