--- a/views/sesion.ejs
+++ b/views/sesion.ejs
@@ -101,6 +101,7 @@
   
 
   
+  <!-- ======= Footer ======= -->
   <footer id="footer">
 
     <div class="footer-top">
@@ -113,7 +114,7 @@
               Eduacation<br>
               Avaitable<br>
               every one<br><br>
-              <strong>inquietudes:</strong> a<br>
+              <strong>inquietudes:</strong> <br>
               <strong>Email:</strong> info@Learnig4allcom<br>
             </p>
           </div>
@@ -121,10 +122,10 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Inicio</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">¿Quienes somos?</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Cursos</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Iniciar sesion</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/index.html">Inicio</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/about.html">¿Quienes somos?</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/courses.html">Cursos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/sesion.html">Iniciar sesion</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
           </div>
@@ -139,7 +140,7 @@
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Estudia en Learning4All</h4>
             <p>carrera desarrollo Full Stack</p>
-            <p>opiniiones</p>
+            <p>opiniones</p>
             <p>preguntas frecuentes</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
