--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -152,75 +152,76 @@
       </div>
     </section>
   
-    <footer id="footer">
+    <!-- ======= Footer ======= -->
+  <footer id="footer">
 
-      <div class="footer-top">
-        <div class="container">
-          <div class="row">
-  
-            <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>Learning4All</h3>
-              <p>
-                Eduacation<br>
-                Avaitable<br>
-                every one<br><br>
-                <strong>inquietudes:</strong> a<br>
-                <strong>Email:</strong> info@Learnig4allcom<br>
-              </p>
-            </div>
-  
-            <div class="col-lg-2 col-md-6 footer-links">
-              <h4>Links</h4>
-              <ul>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">Inicio</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">¿Quienes somos?</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">Cursos</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">Iniciar sesion</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-              </ul>
-            </div>
-  
-            <div class="col-lg-3 col-md-6 footer-links">
-              <h4>Sobre Learnig4all</h4>
-              
-              <p>Podrás construir en equipos de proyectos del mundo real con metodologías y herramientas ágiles Scrum</p>
-   
-            </div>
-  
-            <div class="col-lg-4 col-md-6 footer-newsletter">
-              <h4>Estudia en Learning4All</h4>
-              <p>carrera desarrollo Full Stack</p>
-              <p>opiniiones</p>
-              <p>preguntas frecuentes</p>
-              <form action="" method="post">
-                <input type="email" name="email"><input type="submit" value="Subscribe">
-              </form>
-            </div>
-  
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-lg-3 col-md-6 footer-contact">
+            <h3>Learning4All</h3>
+            <p>
+              Eduacation<br>
+              Avaitable<br>
+              every one<br><br>
+              <strong>inquietudes:</strong> <br>
+              <strong>Email:</strong> info@Learnig4allcom<br>
+            </p>
           </div>
+
+          <div class="col-lg-2 col-md-6 footer-links">
+            <h4>Links</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="/index.html">Inicio</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/about.html">¿Quienes somos?</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/courses.html">Cursos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/sesion.html">Iniciar sesion</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-3 col-md-6 footer-links">
+            <h4>Sobre Learnig4all</h4>
+            
+            <p>Podrás construir en equipos de proyectos del mundo real con metodologías y herramientas ágiles Scrum</p>
+ 
+          </div>
+
+          <div class="col-lg-4 col-md-6 footer-newsletter">
+            <h4>Estudia en Learning4All</h4>
+            <p>carrera desarrollo Full Stack</p>
+            <p>opiniones</p>
+            <p>preguntas frecuentes</p>
+            <form action="" method="post">
+              <input type="email" name="email"><input type="submit" value="Subscribe">
+            </form>
+          </div>
+
         </div>
       </div>
-  
-      <div class="container d-md-flex py-4">
-  
-        <div class="me-md-auto text-center text-md-start">
-          <div class="copyright">
-            &copy; Copyright <strong><span>Learning4All</span></strong>. Learning@2022 Todos los derechos reservados
-          </div>
-          <div class="credits">
-  
-            hecho con amor para el mundo
-          </div>
+    </div>
+
+    <div class="container d-md-flex py-4">
+
+      <div class="me-md-auto text-center text-md-start">
+        <div class="copyright">
+          &copy; Copyright <strong><span>Learning4All</span></strong>. Learning@2022 Todos los derechos reservados
         </div>
-        <div class="social-links text-center text-md-right pt-3 pt-md-0">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <div class="credits">
+
+          hecho con amor para el mundo
         </div>
       </div>
-    </footer><!-- End Footer -->
+      <div class="social-links text-center text-md-right pt-3 pt-md-0">
+        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      </div>
+    </div>
+  </footer><!-- End Footer -->
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
