--- a/views/about.ejs
+++ b/views/about.ejs
@@ -113,13 +113,14 @@
 
       </div>
     </section><!-- End About Section -->
+    <!--
     <section id="integrantes" class="integrantes">
       <div>
         <div>
           <img src="/img/integrantes.png" alt="">
         </div>
       </div>
-    </section>
+    </section>-->
     <!-- ======= Counts Section ======= -->
     <section id="counts" class="counts section-bg">
       <div class="container">
@@ -160,7 +161,7 @@
           <p>Aprende del desarrollo de Learning<span style="color: #e63946;">4</span>ALL</p>
         </div>
         <div>
-          <!--
+          
           <iframe width="100%" 
           height="1000px" 
           src="https://academiausbbogedu.sharepoint.com/:u:/r/sites/LEARNING4ALL19/SitePages/Home.aspx?csf=1&web=1&share=Ec1XEUpmn3BJmADw4uXuFFMBCMYd2E2procpwlJoeQl-xg&e=rYnZfw" 
@@ -170,7 +171,7 @@
           seamless="seamless"  
           overflow:hidden;
           allowfullscreen></iframe>
-          -->
+          
         </div>
 
         <div><br></div>
